--- a/ugly-tooltip/src/main/res/layout/tutorial_view.xml
+++ b/ugly-tooltip/src/main/res/layout/tutorial_view.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_group_tutor_content"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/tooltip_radius"
-    app:cardElevation="0dp"
     android:layout_margin="0dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical"
+    app:cardCornerRadius="@dimen/tooltip_radius"
+    app:cardElevation="0dp">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,89 +17,132 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:paddingTop="@dimen/text_padding_12"
-            android:paddingHorizontal="@dimen/text_padding_12"
             android:id="@+id/text_title"
-            tools:text="Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="@dimen/text_padding_12"
+            android:paddingTop="@dimen/text_padding_12"
             android:textStyle="bold"
-            tools:textSize="@dimen/title_size"/>
+            tools:text="Title"
+            tools:textSize="@dimen/title_size" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/text_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Description description description description description description"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
             android:paddingLeft="@dimen/text_padding_12"
-            android:paddingRight="@dimen/text_padding_12"/>
+            android:paddingTop="8dp"
+            android:paddingRight="@dimen/text_padding_12"
+            android:paddingBottom="8dp"
+            tools:text="Description description description description description description" />
 
         <View
             android:id="@+id/view_line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp" />
 
         <LinearLayout
             android:id="@+id/ll_bottom_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/text_previous"
-                android:paddingLeft="@dimen/text_padding_12"
-                android:paddingTop="@dimen/text_padding_12"
-                android:paddingBottom="@dimen/text_padding_12"
                 android:layout_width="@dimen/buttom_width_small"
                 android:layout_height="wrap_content"
                 android:background="@drawable/selector_white"
-                android:gravity="center"
                 android:clickable="true"
                 android:focusable="true"
-                tools:text="@string/previous"/>
+                android:gravity="center"
+                android:paddingLeft="@dimen/text_padding_12"
+                android:paddingTop="@dimen/text_padding_12"
+                android:paddingBottom="@dimen/text_padding_12"
+                tools:text="@string/previous" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ic_previous"
                 android:layout_width="@dimen/buttom_width_small"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:paddingLeft="@dimen/text_padding_12"
                 android:paddingTop="@dimen/text_padding_12"
                 android:paddingBottom="@dimen/text_padding_12"
-                android:gravity="center"
                 android:visibility="gone"
-                app:srcCompat="@drawable/ic_left_arrow"/>
+                app:srcCompat="@drawable/ic_left_arrow" />
+
             <LinearLayout
                 android:id="@+id/view_group_indicator"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:gravity="center">
-            </LinearLayout>
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal"></LinearLayout>
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/text_next"
-                android:paddingRight="@dimen/text_padding_12"
-                android:paddingVertical="@dimen/text_padding_12"
                 android:layout_width="@dimen/buttom_width_small"
                 android:layout_height="wrap_content"
+                android:background="@drawable/selector_white"
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center"
-                android:background="@drawable/selector_white"
-                tools:text="@string/next"/>
+                android:paddingVertical="@dimen/text_padding_12"
+                android:paddingRight="@dimen/text_padding_12"
+                tools:text="@string/next" />
+
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ic_next"
                 android:layout_width="@dimen/buttom_width_small"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/text_padding_12"
-                android:paddingVertical="12dp"
                 android:gravity="center"
+                android:paddingVertical="12dp"
+                android:paddingRight="@dimen/text_padding_12"
                 android:visibility="gone"
-                app:srcCompat="@drawable/ic_right_arrow"/>
+                app:srcCompat="@drawable/ic_right_arrow" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_skip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingTop="2dp"
+                android:paddingRight="5dp"
+                android:paddingBottom="2dp"
+                android:scaleType="fitXY"
+                android:src="@android:drawable/divider_horizontal_dark" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/text_skip"
+                    android:layout_width="@dimen/buttom_width_small"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/selector_white"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/text_padding_12"
+                    android:paddingTop="@dimen/text_padding_12"
+                    android:paddingBottom="@dimen/text_padding_12"
+                    tools:text="@string/skip" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
 </androidx.cardview.widget.CardView>
